# langchain-google-cloud-sql-mssql-python

./: .repo-metadata.json  CHANGELOG.md  DEVELOPER.md  README.md  README.rst  integration.cloudbuild.yaml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  blunderbuss.yml  sync-repo-settings.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.kokoro/: build.sh  publish-docs.sh  release.sh
.kokoro/docs/: common.cfg  docs-presubmit.cfg
.kokoro/release/: common.cfg
docs/: README.rst  changelog.md  chat_message_history.ipynb  conf.py  document_loader.ipynb  index.rst
docs/langchain_google_cloud_sql_mssql/: engine.rst  history.rst  loader.rst
src/langchain_google_cloud_sql_mssql/: __init__.py  chat_message_history.py  engine.py  loader.py  mssql_chat_message_history.py  mssql_engine.py  mssql_loader.py  mysql_engine.py  mysql_loader.py
tests/integration/: test_mssql_chat_message_history.py  test_mssql_loader.py  test_mysql_loader.py
tests/unit/: test_doc2row.py
