[project]
name = "langchain-google-cloud-sql-mssql"
dynamic = ["version"]
description = "LangChain integrations for Google Cloud SQL for SQL Server"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "Google LLC", email = "googleapis-packages@google.com"}
]
dependencies = [
    "langchain>=0.1.1, <1.0.0",
    "SQLAlchemy>=2.0.7, <3.0.0",
    "sqlalchemy-pytds>=1.0.0, <2.0.0",
    "cloud-sql-python-connector[pytds]>=1.7.0, <2.0.0"
]

[tool.setuptools.dynamic]
version = {attr = "langchain_google_cloud_sql_mssql.version.__version__"}

[project.urls]
Homepage = "https://github.com/googleapis/langchain-google-cloud-sql-mssql-python"
Repository = "https://github.com/googleapis/langchain-google-cloud-sql-mssql-python.git"
"Bug Tracker" = "https://github.com/googleapis/langchain-google-cloud-sql-mssql-python/issues"
Changelog = "https://github.com/googleapis/langchain-google-cloud-sql-mssql-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "black[jupyter]==23.12.0",
    "isort==5.13.2",
    "mypy==1.7.1",
    "pytest-asyncio==0.23.0",
    "pytest==7.4.4"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
