[project]
name = "langchain-google-cloud-sql-mssql"
dynamic = ["version"]
description = "LangChain integrations for Google Cloud SQL for SQL Server"
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Google LLC", email = "googleapis-packages@google.com"}
]
dependencies = [
    "langchain-core>=0.1.25, <1.0.0",
    "langchain-community>=0.0.18, <1.0.0",
    "SQLAlchemy>=2.0.7, <3.0.0",
    "sqlalchemy-pytds>=1.0.0, <2.0.0",
    "cloud-sql-python-connector[pytds]>=1.10.0, <2.0.0"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools.dynamic]
version = {attr = "langchain_google_cloud_sql_mssql.version.__version__"}

[project.urls]
Homepage = "https://github.com/googleapis/langchain-google-cloud-sql-mssql-python"
Repository = "https://github.com/googleapis/langchain-google-cloud-sql-mssql-python.git"
"Bug Tracker" = "https://github.com/googleapis/langchain-google-cloud-sql-mssql-python/issues"
Changelog = "https://github.com/googleapis/langchain-google-cloud-sql-mssql-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "black[jupyter]==24.8.0",
    "isort==5.13.2",
    "langchain==0.3.1",
    "mypy==1.11.2",
    "pytest-asyncio==0.24.0",
    "pytest==8.3.3",
    "pytest-cov==5.0.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_incomplete_defs = true

exclude = [
    'docs/*',
    'noxfile.py'
]